--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@
             <a href="" class="header__link">Kategoriyalar</a>
           </li>
           <li class="header__item">
-            <a href="" class="header__link">Yordam / FAQ</a>
+            <a href="tel:+998948684041" class="header__link"> 
+              <i class="ic fa-solid fa-phone"></i>
+              +998 (94) 868-40-41</a>
           </li>
         </ul>
 
